syntax = "proto3";

package aliothcontroller;

option java_package = "com.futurewei.alioth.controller.schema";
option java_outer_classname = "Subnet";

import "common.proto";

message SubnetConfiguration {
  int32 version = 1;

  string project_id = 2;
  string vpc_id = 3;
  string id = 4;
  string name = 5;
  string cidr = 6;
  int64 tunnel_id = 7;

  string gateway_ip = 8;
  bool dhcp_enable = 9;
  string availability_zone = 10;
  string primary_dns = 11;
  string secondary_dns = 12;

  message DnsEntry {
    string entry = 1;
  }

  message SecurityGroupId {
    string id = 1;
  }

  message TransitSwitch {
    string vpc_id = 1;
    string subnet_id = 2;
    string ip_address = 3;
    string mac_address = 4;
  }

  repeated DnsEntry dns_list = 13;
  repeated SecurityGroupId security_group_ids = 14;
  repeated TransitSwitch transit_switches = 15;
}
message SubnetState {
  OperationType operation_type = 1;
  SubnetConfiguration configuration = 2;
}
